added star svg to title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <div class="ovals">
       <h1 class="header-title">JavaScript30</h1>
         <div class="oval-1"></div>
-        <div class="oval-2"></div>
+        <div class="oval-2">
+            <img class="star star-1" src="./assets/star.svg"/>
+            <img class="star star-2" src="./assets/star.svg"/>
+        </div>
     </div>
 </div>
     <p class="header-desc">Here is a list of my completed versions of JavaScript30 practoce projects. It is a free course created by Wes Bos, which consists of small practice projects to enhance your vanilla JS skills.</p>
