--- a/02-CSS-and-JS-Clock/index.html
+++ b/02-CSS-and-JS-Clock/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Scoped CSS Variables and JS</title>
+  <title>JS + CSS Clock</title>
   <link rel="icon" href="https://fav.farm/🔥" />
   <link rel="stylesheet" href="style.css">
 </head>
