--- a/03-CSS-Variables/index.html
+++ b/03-CSS-Variables/index.html
@@ -17,10 +17,12 @@
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base" value="#8b4513">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWs2d2lqazN0Nzh4cXV4Z28wcmU3N3kycGh2Zml5ZHdoMGczdDdjbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6zUyjVYVrzS4j2uYlO/giphy.gif" class="photo">
+  
+  <p>[Click image to reset values]<p>
 
   <script src="script.js"></script>
 
