--- a/04-Array-Cardio-Day-1/index.html
+++ b/04-Array-Cardio-Day-1/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Array Cardio 💪</title>
+  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap">
+</head>
+<body>
+  <div class="typewriter">
+    <p>Psst. have a look at the JavaScript Console 😉</p>
+  </div>
+  
+  <style>
+    html, body {
+      height: 100%;
+    }
+    body {
+      padding: 0;
+      margin: 0;
+      background: #f0eef3;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    p {
+      color: #138D75;
+      font-size: 1.8rem;
+      line-height: 1.40;
+      font-family: "Cherry Bomb One", sans-serif;
+      font-variant-emoji: text;
+      overflow: hidden;
+      border-right: .15em solid orange;
+      white-space: nowrap;
+      margin: 0 auto;
+      letter-spacing: .15em;
+      animation: 
+        typing 3.5s steps(40, end),
+        blink-caret .75s step-end infinite;
+    }
+    /* The typing effect */
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+    /* The typewriter cursor effect */
+    @keyframes blink-caret {
+      from, to { border-color: transparent }
+      50% { border-color: orange; }
+    }
+  </style>
 
+  <script>
+    
+  </script>
+
+</body>
+</html>
