--- a/08-HTML5-Canvas/index.html
+++ b/08-HTML5-Canvas/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
   <link rel="icon" href="https://fav.farm/🔥" />
-  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" />
 </head>
 <body>
   <canvas id="draw" width="800" height="800"></canvas>
