--- a/11-Custom-Video-Player/index.html
+++ b/11-Custom-Video-Player/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>HTML Video Player</title>
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="https://fav.farm/🔥" />
+</head>
+<body>
+<div class="player">
+  <video class="player_video viewer" src="bratz.mp4"></video>
+  
+  <div class="player_controls">
+    <div class="progress">
+      <div class="progress_filled"></div>
+    </div>
+    <button class="player_button toggle" title"=Toggle Play">►</button>
+    <input type="range" name="volume" class="player_slider" min="0" max="1" step="0.05" value="1" title="Adjust Volume">
+    <input type="range" name="playbackRate" class="player_slider" min="0.5" max="2" step="0.1" vlaue="1" title="Adjust Speed">
+    <button data-skip="-10" class="player_button" title="Rewind">« 10s</button>
+    <button data-skip="25" class="player_button" title="Forward">25s »</button>
+    <button class="player_button fullscreen" title="Full Screen">⛶<i class="ion-arrow-expand"></i></button>
+  </div>
+</div>
 
+  <script src="script.js"></script>
+</body>
+</html>
