--- a/14-Object-and-Arrays/index.html
+++ b/14-Object-and-Arrays/index.html
@@ -70,14 +70,14 @@
       // age = 200;
       // console.log(age, age2);
 
-      // let name = 'Katherine';
+      // let name = 'Harmony';
       // let name2 = name;
       // console.log(name, name2);
-      // name = 'kathy';
+      // name = 'harmony';
       // console.log(name, name2);
 
       // let's say we have an array
-      const players = ["Katherine", "Sarah", "Ryan", "Poppy"];
+      const players = ["Harmony", "Sarah", "Ryan", "Poppy"];
 
       // and we want to make a copy of it.
       const team = players;
