--- a/14-Object-and-Arrays/index.html
+++ b/14-Object-and-Arrays/index.html
@@ -109,7 +109,7 @@
       // the same thing goes for objects, let's say we have a person object with Objects
       const person = {
         name: "Harmony Mothershed",
-        age: 23,
+        age: 80
       };
 
       // and think we make a copy:
